# SAI

./: .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PROPUESTA.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: rust.yml
configs/: database.rs  server.rs
docs/: api.md  database.md
src/: db.rs  lib.rs  main.rs
src/models/: assessment.rs  attendance.rs  authentication.rs  course.rs  enrollment.rs  mod.rs  student.rs  teacher.rs  user.rs
src/models/migrations/: 20250313_create_courses_table.sql  20250313_create_students_table.sql  20250313_create_teachers_table.sql  20250313_create_users_table.sql  20250318_create_assessments_table.sql  20250318_create_attendance_table.sql  20250318_create_authentication_table.sql  20250318_create_enrollments_table.sql
src/routes/: admin.rs  auth.rs  courses.rs  mod.rs  students.rs  teachers.rs  users.rs
src/services/: courses.rs  mod.rs  students.rs  teachers.rs  users.rs
src/utils/: mod.rs
