[package]
name = "SAI"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
time = "0.3.23"
futures = "0.3.28"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
env_logger = "0.10.0"
log = "0.4.20"
dotenv = "0.15.0"
bcrypt = "0.15.0"
rand = "0.8.5"

